--- a/src/style.css
+++ b/src/style.css
@@ -1,149 +1,78 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-  color-scheme: light dark;
+@layer theme, base;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import "./theme.css" layer(theme);
+@import "tailwindcss/preflight.css" layer(base);
 
-  --color-primary: #9C4F2B;
-  /* Marrom Terracota - contornos e destaques */
-  --color-background: #F9F3EE;
-  /* Bege Claro - fundo principal */
-  --color-accent: #C67C52;
-  /* Marrom Claro - elementos de apoio */
-  --color-soft: #FCEFE8;
-  /* Marfim Rosado - hover e detalhes */
-  --color-dark: #4A2E1F;
-  /* Castanho Escuro - texto forte, contraste */
-  --font-title: 3rem;
-  --font-subtitle: 2rem;
+@theme {
+    --color-primary: #9C4F2B;
+    /* Marrom Terracota - contornos e destaques */
+    --color-background: #F9F3EE;
+    /* Bege Claro - fundo principal */
+    --color-accent: #C67C52;
+    /* Marrom Claro - elementos de apoio */
+    --color-soft: #FCEFE8;
+    /* Marfim Rosado - hover e detalhes */
+    --color-dark: #4A2E1F;
+
+    --animate-slide-in-right: slide-in-right 0.6s ease-out forwards;
+    --animate-slide-in-left: slide-in-left 0.6s ease-out forwards;
+
+
+    @keyframes slide-in-right {
+        0% {
+            opacity: 0;
+            transform: translateX(50px);
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes slide-in-left {
+        0% {
+            opacity: 0;
+            transform: translateX(-50px);
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
 }
 
-body {
-  margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
-  background-color: var(--color-background);
-  color: var(--color-dark);
-  box-sizing: border-box;
-}
+@layer base {
+    figure {
+        overflow: hidden;
+    }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+    img {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        object-fit: contain;
+    }
 
-#toolbar {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  height: 5rem;
-}
+    body {
+        margin: 0;
+        min-width: 320px;
+        min-height: 100vh;
+        padding: 1.5rem;
+        overflow-y: scroll;
+    }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-figure {
-  margin: 0;
-  padding: 0;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-#toolbar--logo {
-  height: 100%;
-}
-
-#toolbar--logo:hover {
-  cursor: pointer;
-}
-
-#toolbar--list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  gap: 5rem;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  flex: 1;
-}
-
-#toolbar--list li {
-  list-style: none;
-  color: var(--color-dark);
-  padding: 0.5rem 0.8rem;
-  text-align: center;
-  border-radius: 5rem;
-  transition: background-color 0.3s;
-}
-
-#toolbar--list li:hover {
-  color: var(--color-soft);
-  background-color: var(--color-dark);
-  cursor: pointer;
-}
-
-#hero {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  height: 30rem;
-  gap: 5rem;
-}
-
-#hero--face {
-  height: 20rem;
-  overflow: hidden;
-  border-radius: 50%;
-  border: 5px solid var(--color-primary);
-}
-
-#hero--cta {
-  flex: 1;
-  text-align: left;
-}
-
-#hero--cta h1 {
-  font-size: var(--font-title);
-  color: var(--color-primary);
-}
-
-#hero--cta h2 {
-  font-size: var(--font-subtitle);
-}
-
-#hero--cta button {
-  width: 10rem;
-  height: 5rem;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.5rem 1rem;
-  background-color: var(--color-accent);
-  border: none;
-  cursor: pointer;
-}
-
-#hero--cta--icon {
-  height: 2rem;
-}
-
-#hero--cta--text {
-  flex: 1;
+    button {
+        background-color: var(--color-primary);
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding: 0.8rem;
+        gap: 1rem;
+        border-radius: 1rem;
+    }
 }
