--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,10 @@
 }
 
 @layer base {
+    html {
+        scroll-behavior: smooth !important;
+    }
+
     figure {
         overflow: hidden;
     }
